# nyefan.org

./: .gitignore  Gemfile  README.md  _config.yml
_data/: authors.yml  navigation.yml
_pages/: 404.md  categories.md  home.md  posts.md
_posts/: 2019-07-29-The-35-Words-You-Need-To-Python.md  2019-07-30-Another-NPM-Fuckup.md  2019-08-05-The-Tragedy-Of-UCS-2.md  2019-10-14-How-Multiplexing-Changes-Your-HTTP-APIs.md  2019-10-28-Lutris-Net.md  2019-10-29-Text-Hates-You.md  2019-11-16-Htop-Explained.md  2019-11-18-A-Programmer's-Guide-To-Performance-Analysis-And-Tuning-On-Modern-CPUs.md  2019-11-18-Userspace-USB-Drivers.md  2019-11-25-Learn-Reversing-By-Solving-MalwareTech-VM-Using-Cutter.md  2019-12-03-Implementation-Defined-Behavior-In-Csharp.md  2019-12-10-MicroPython-An-Intro-To-Programming-Hardware-In-Python.md  2020-07-25-Federal-Police-Shoot-Journalists.md  2020-07-25-From-Portland-To-The-World.md  (+23 more)
site/: .gitignore  Cargo.toml  rust-toolchain.toml
site/content/.well-known/matrix/: client  server
site/content/_pages/: 404.md  about.md  contact.md
site/content/_posts/: 2023-04-01-My-Git-Release-Flow.md  2023-09-23-LexTalk-Tech-October-2023.md  2025-02-08-Civilization-VII:-I-Have-Thoughts.md  2025-12-26-Games-I-Played-In-2025.md
site/content/slides/2023-10-12-LexTalk-Tech/: index.html
site/content/slides/halloween/resources/: no.6-4.avif
site/src/: main.rs
site/src/pages/: about.rs  contact.rs  index.rs  mod.rs  post.rs  posts.rs
site/src/util/: components.rs  mod.rs  styles.rs
site/src/util/js/: updateAndMaintainLayout.js
(+18 files in other folders)
